[package]
name = "vaultssh"
version = "0.2.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A small CLI wrapper for authenticating with SSH keys from Hashicorp Vault."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/vssh"
edition = "2018"

[[bin]]
name = "vssh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
dirs = "6.0.0"
mockall = "0.13.1"
phf = { version = "0.11.3", features = ["macros"] }
rpassword = "7.3.1"
serde = "1.0.218"
shellexpand = "3.1.0"
sshkeys = "0.3.3"
text_io = "0.1.12"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
vaultrs = { version = "0.7.4" }
vaultrs-login = { version = "0.2.3", features = ["oidc"] }
webbrowser = "1.0.3"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
async-trait = "0.1.86"
mockall = "0.13.1"
predicates = "3.1.3"
rustify = "0.6.1"
vaultrs-test = "0.2.2"
